--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,24 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  // background: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+  background-color: transparent;
+transition: 0.5s background-color ease;
+height: 67px;
 }
 
+
+
+.navbar-lewagon-white {
+  justify-content: space-between;
+  background: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  z-index: 100;
+  background-color: transparent;
+transition: 0.5s background-color ease;
+height: 67px;
+}
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
