--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,6 +12,8 @@ body {
 
 #content {
 	flex-grow:1; /* 4 */
+
+    padding-top: 70px;
 }
 
 .slogan {
@@ -60,3 +62,14 @@ body {
 .flash-danger {
   border: 2px solid #FD1015;
 }
+#background-video {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  }
