--- a/app/views/bookings/_adminowner.html.erb
+++ b/app/views/bookings/_adminowner.html.erb
@@ -24,7 +24,7 @@
           </div>
           <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
         </div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between py-2 px-4">
           <%= link_to 'Editer', edit_personnality_path(personnality.id), class:"text-decoration-none text-success"%>
           <%= link_to 'Supprimer', personnality_path(personnality.id), data: {turbo_method: :delete, turbo_confirm: "Êtes vous sûr ?"}, class:"text-decoration-none text-danger" %>
         </div>
