--- a/app/views/bookings/_userprofile.html.erb
+++ b/app/views/bookings/_userprofile.html.erb
@@ -2,9 +2,9 @@
   <div class="d-flex align-self-center"><%= cl_image_tag current_user.photo.key, crop: :fill, class: "avatar-bordered dropdown-toggle largepic", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %></div>
   <div class="d-flex flex-column align-self-center mx-4 flex-grow-1">
     <div class="d-flex fs-4"><strong><%= current_user.lastname %> <%= current_user.firstname %></strong></div>
-    <div class="d-flex"><strong>Mail : </strong><%= current_user.email %></div>
-    <div class="d-flex"><strong>Tél : </strong>+33<%= current_user.phone %></div>
-    <div class="d-flex"><strong>Adresse :</strong> <%= current_user.address %></div>
+    <div class="d-flex"><strong><% if current_user.email != nil %> Mail : </strong><%= current_user.email %> <% end %> </div>
+    <div class="d-flex"><strong><% if current_user.phone != nil %> Tél : </strong><%= current_user.phone %> <% end %> </div>
+    <div class="d-flex"><strong><% if current_user.address != nil %> Addresse : </strong><%= current_user.address %> <% end %> </div>
    </div>
   <div class="d-flex flex-column align-self-center">
    <%= link_to 'Editer mon profile', edit_user_registration_path, class: "btn  text-success" %>
