--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -73,3 +73,18 @@ body {
   bottom: 0;
   z-index: 1;
   }
+
+.homepagefull {
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+
+  background-image: url("https://res.cloudinary.com/dkzycxs88/image/upload/v1677838226/pexels-pixabay-273886_qwzy0l.jpg")
+}
+
+#presentation p {
+
+    font-size:14px;
+    margin-bottom: 10px;
+
+}
