--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -88,3 +88,13 @@ body {
     margin-bottom: 10px;
 
 }
+
+#confiance{
+  text-align:center;
+  padding: 20px;
+  margin-bottom: 34px;
+  font-stretch: condensed;
+  letter-spacing: 3px;
+  color:#333;
+  font-size: 40px
+}
