--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,26 +18,28 @@
   </div>
 </div>
 
-<div class="container px-3 py-5">
-  <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+<div class="container px-3 mb-5">
+<p id="confiance">Ils nous font confiance</p>
+
+  <div class="d-flex flex-row align-items-center">
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/eiffage.png", style:"width:150px" %></div>
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/presidence.png", style:"width:150px"  %></div>
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/total.png", style:"width:150px"  %></div>
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/interieur.png", style:"width:150px"  %></div>
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/fifa.png", style:"width:150px"  %></div>
+  <div class="d-flex col-2 justify-content-center"><%= image_tag "confiance/lesanges.png", style:"width:150px"  %></div>
+   </div>
 </div>
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> pour la France !
+  </div>
 </div>
