--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -55,7 +55,7 @@ height: 67px;
 }
 
 .button-rounded {
-  border: 1px solid #F3F3F3;
+  // border: 1px solid #F3F3F3;
   padding: 5px 10px 5px 10px;
   border-radius: 28px;
   transition: box-shadow 1s ease-out 100ms
@@ -71,9 +71,8 @@ height: 67px;
  }
 
  .name {
-  font-size: 12px;
-  float: left;
+   float: left;
   margin: 0;
   line-height: 35px;
-  padding: 0 15px 0 5px;
+  padding: 2px 15px 0 5px;
  }
