--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
 <div class="homepagefull">
+    <div class="typing-container">
+    <span id="sentence" class="sentence" style="padding-right:5px">Vous êtes conçerné par une affaire de </span>
+    <span id="feature-text"></span>
+    <span class="input-cursor"> </span>
+  </div>
 </div>
 
 <div class="container px-3 py-5">
