--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,8 +14,8 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   flex-wrap: wrap;
   flex-direction: column
-
 }
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -73,9 +73,17 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  transition: 0.3s;
 }
 .card-trip:hover {
-  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  transform: scale(1.1);
+  transition: 0.3s;
+  box-shadow: 0 0 30px rgba(0,0,0,0.4);
+}
+
+.card-trip:hover .icone-list-pers{
+  color: #FF0057;
 }
 
 .card-trip > img {
@@ -86,8 +94,8 @@
 
 .card-trip h2 {
   font-size: 16px;
-  font-weight: bold;
   margin: 0;
+  text-shadow: #222222;
 }
 
 .card-trip p {
@@ -135,12 +143,11 @@
   font-style: italic;
 }
 
-.card-trip-infos .personnality-infos h6 {
+.card-trip-infos .personnality-infos-card h6 {
   font-size:10px;
   margin: 5px 0;
   font-weight: bold;
   color: #333;
-
 }
 
 .rose {
@@ -187,3 +194,30 @@ color: #333;
   .card-product .card-product-infos {
     padding: 16px;
   }
+
+  .personnality-infos-card .personnality-name {
+    position: absolute;
+    bottom: 116Px;
+    left: 7px;
+    background-color: #f0f0f0;
+    opacity: 0.9;
+    font-size: 19px;
+    padding: 9px 10px 6px 10px;
+    border-radius: 25px;
+    color: black;
+    font-family: sans-serif;
+  }
+
+  .card-trip-rating {
+    position: relative;
+    bottom: 66px;
+    padding: 10px 10px 10px 5px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    color: black;
+  }
+
+  .price-text {
+    font-size: 30px;
+    color: #111;
+    }
