--- a/app/views/shared/_personnality_card.html.erb
+++ b/app/views/shared/_personnality_card.html.erb
@@ -12,8 +12,8 @@
         <%= link_to personnality_path(personnality), class:"linkdiv" do %>
           <div class="card-trip-infos  d-flex align-items-start">
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
-            <div class="personnality-infos">
-              <h2><%= personnality.name %></h2>
+            <div class="personnality-infos-card">
+              <h2 class="personnality-name"><%= personnality.name %></h2>
 
 <div class="d-flex  fs-6">
 <div class="d-flex text-center">
@@ -23,10 +23,10 @@
 </div>
 </div>
 
-              <h2><%= personnality.price %> € / jour</h2>
+              <h2><span class="price-text"><%= personnality.price %></span> € / jour</h2>
 
             </div>
-            <h2 class="card-trip-pricing d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
+            <h2 class="card-trip-rating d-flex"><i class="fa-solid fa-star rose px-1"></i> <%= personnality.rating %></h2>
           </div>
         <% end %>
 
