--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,15 @@
 <div class="homepagefull">
-    <div class="typing-container">
-    <span id="sentence" class="sentence" style="padding-right:5px">Vous êtes conçerné par une affaire de </span>
-    <span id="feature-text"></span>
-    <span class="input-cursor"> </span>
+<div class="d-flex typing">
+    <div class="typing-container d-flex flex-column">
+      <div class="d-flex">
+        <div id="sentence" class="sentence">Vous êtes conçerné par une affaire de </div>
+      </div>
+      <div class="d-flex">
+        <div id="feature-text"></div>
+        <div class="input-cursor"> </div>
+      </div>
   </div>
+</div>
 </div>
 
 <div class="container px-3 py-5">
