--- a/app/views/shared/_personnality_card.html.erb
+++ b/app/views/shared/_personnality_card.html.erb
@@ -13,13 +13,12 @@
           <div class="card-trip-infos  d-flex align-items-start">
           <div class="add-favorite position-absolute top-0 end-0"><i class="fa-regular fa-heart"></i></div>
             <div class="personnality-infos-card">
-              <h2 class="personnality-name"><%= personnality.name %></h2>
+              <h2 class="personnality-name">Pack: <%= personnality.name %></h2>
 
 <div class="d-flex  fs-6">
 <div class="d-flex text-center">
-<% @joinskills.where(personnality_id: personnality.id).each do |join| %>
-<div class="icone-list-pers d-flex p-2 miniicone"> <i class="<%= join.skill.icone %>"></i></div>
-<% end %>
+<div class="d-flex description-card p-2"><%= personnality.description.slice(0, 100) %></div>
+
 </div>
 </div>
 
