--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -32,7 +32,9 @@
 </div>
 
       <h2>Mon experience :</h2>
-      <p><%= @personnality.description %></p>
+      <p><%= simple_format(@personnality.description) %></p>
+
+
     </div>
   </div>
 
