--- a/app/views/bookings/_adminprofile.html.erb
+++ b/app/views/bookings/_adminprofile.html.erb
@@ -8,7 +8,7 @@
    </div>
   <div class="d-flex flex-column align-self-center">
    <%= link_to 'Editer mon profile', edit_user_registration_path, class: "btn  text-success" %>
-   <%= link_to '++ Ajouter une fiche personnalité', new_personnality_path, class: "btn  text-primary-emphasis" %>
+   <%= link_to '++ Ajouter une fiche spécialiste', new_personnality_path, class: "btn  text-primary-emphasis" %>
    <%= link_to 'Supprimer mon profile', edit_user_registration_path, class: "btn text-danger" %>
 
   </div>
