--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,7 @@
         <div id="feature-text"></div>
         <div class="input-cursor"> </div>
       </div>
+     <div class="my-5 rounded"> <%= link_to 'Découvrez nos spécialistes', personnalities_path, class:"btn rounded btn-outline-light", style:"border-color:#FF0057; color:#FF0057;" %></div>
   </div>
 </div>
 </div>
