--- a/app/views/personnalities/edit.html.erb
+++ b/app/views/personnalities/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
   <div class="flex-column w-50">
-    <h2>Editer la personnalité</h2>
+    <h2>Editer le spécialiste</h2>
     <%= render "form", personnality: @personnality %>
   </div>
 </div>
