--- a/app/views/personnalities/new.html.erb
+++ b/app/views/personnalities/new.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="flex-column w-50">
 
-    <h2>Ajouter une nouvelle personnalité</h2>
+    <h2>Ajouter un nouveau spécialiste</h2>
     <%= render "form", personnality: @personnality %>
 
   </div>
