--- a/app/views/shared/_ancienne_home.html.erb
+++ b/app/views/shared/_ancienne_home.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex my-4">
     <div class="d-flex col-4 flex-column">
       <h2 class="slogan">Ils ont évités la prison, alors pourquoi pas vous ?</h2>
-      <%= link_to "Voir nos personnalitées", personnalities_path, class: "btn btn-ghost w-50" %>
+      <%= link_to "Voir nos spécialistes", personnalities_path, class: "btn btn-ghost w-50" %>
     </div>
     <div class="d-flex col-8 flex-column justify-content-center home-img" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://www.euractiv.fr/wp-content/uploads/sites/3/2021/03/sarkozy-tribunal-800x450.jpg);">
       <div class="container">
