--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse button-rounded " id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-          <%= link_to "Nos personnalités | ", personnalities_path, class: "nav-link" %>
+          <%= link_to "Nos spécialistes | ", personnalities_path, class: "nav-link" %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item dropdown-connect">
@@ -29,7 +29,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Mes reservations", bookings_path, class: "dropdown-item padding-item item-bold" %>
               <% if current_user.owner? %>
-              <%= link_to "++ Ajouter une personnalité", new_personnality_path, class: "dropdown-item padding-item" %>
+              <%= link_to "++ Ajouter un spécialiste", new_personnality_path, class: "dropdown-item padding-item" %>
               <% end %>
               <%= link_to "Editer mon profile", edit_user_registration_path, class: "dropdown-item padding-item border-bottom" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item padding-item" %>
