skills à jour et controller

--- a/app/views/personnalities/_form.html.erb
+++ b/app/views/personnalities/_form.html.erb
@@ -13,7 +13,7 @@
         </div>
       <% end %>
     </div>
-  <%= f.submit "Update", class:"btn-flat"%>
+  <%= f.submit "Valider", class:"btn-flat"%>
 
 
 <% end %>
