--- a/app/views/personnalities/show.html.erb
+++ b/app/views/personnalities/show.html.erb
@@ -33,7 +33,7 @@
 
 </div>
 
-      <h2>Mon experience :</h2>
+      <h2>Etude du cas :</h2>
       <p><%= simple_format(@personnality.description) %></p>
 
 
