--- a/app/views/personnalities/_form.html.erb
+++ b/app/views/personnalities/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :description %>
   <%= f.input :price %>
   <%= f.input :punchline %>
+  <%= f.input :rating %>
   <%= f.input :photo, as: :file %>
     <div class="checkbox-container">
       <% Skill.all.each do |skill| %>
